RESOLVED FIXED308569
[GFC] fix bug where growRowsToFit() is only called when wrapping to new row
https://bugs.webkit.org/show_bug.cgi?id=308569
Summary [GFC] fix bug where growRowsToFit() is only called when wrapping to new row
Yulun Wu
Reported 2026-02-24 11:55:40 PST
Attachments
Yulun Wu
Comment 1 2026-02-24 12:05:00 PST
EWS
Comment 2 2026-02-25 11:11:37 PST
Committed 308217@main (6c08f4a9a680): <https://commits.webkit.org/308217@main> Reviewed commits have been landed. Closing PR #59351 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.