[GFC] Fix crash in auto-placement when grid has no explicit rows https://bugs.webkit.org/show_bug.cgi?id=308569 <rdar://171098357>

Reviewed by Sammy Gill.

When a grid does not have grid-template-rows, explicitly placed items, or
items locked to a given row, the implicit grid starts with 0 rows.
This causes a crash when in the auto placement algorithm when placing the
first auto placed item because it checks if the cell the cursor is pointing
to is empty before it exists.

This is because we previously only called growRowsToFit() when wrapping to a new row,
but this never happens on the first iteration. moving this out of the wrapping condidtional
so rows are created before accessing the grid.

* Source/WebCore/layout/formattingContexts/grid/ImplicitGrid.cpp:
(WebCore::Layout::ImplicitGrid::placeAutoPositionedItemWithAutoColumnAndRow):

Canonical link: https://commits.webkit.org/308217@main